erDiagram
  Cliente |o--o{ Cliente : "IdClienteReferente"
  PlanSuscripcion |o--o{ Cliente : "IdPlan"
  PlanSuscripcion ||--o{ Contratacion : "IdPlan"
  Promocion |o--o{ Contratacion : "IdPromocion"
  Empleado ||--o{ Contratacion : "IdVendedor"
  Empleado |o--o{ Contratacion : "IdCaja"
  Cliente ||--o{ Contratacion : "IdCliente"
  PlanSuscripcion |o--o{ Promocion : "IdPlan"
  Cliente
  PlanSuscripcion
  Empleado
  Contratacion
  Promocion
